Delete commented out code and fix spacing for Sign In. #7

--- a/css/layout.css
+++ b/css/layout.css
@@ -24,16 +24,6 @@ body {
   margin: 0 120px;
 }
 
-/* .border-top-exi-users {
-  border-top: 1px solid black;
-}
-
-.border-bottom-exi-users {
-  border-bottom: 1px solid black;
-  padding-bottom: 20px;
-  padding-top: 20px;
-} */
-
 .page-header {
   height: 50px;
 }
